# water-controller

./: AGENTS.md  PLAYLIST.md  README.md  config.example.json  spec.md
.claude/: settings.local.json
.serena/: project.yml
docs/adr/: adr-001-websocket-connection-in-renderer.md
docs/documentations/: electorn-basic.md  electron-development-guidelines.md  rust-development-guidelines.md
docs/notes/: 20251113_serial-broadcast-strategy.md  content-security-policy-connect-src.md  electron-BrowserWindow.md  electron-context-isolation.md  electron-macos-window-lifecycle.md  electron-packaging-tools.md  electron-preload-typing.md  electron-websocket-patterns.md  how-to-use-useCallback.md  logging-strategy.md  test-asai-docs  useEffect-async-await-best-practices.md
docs/tasks/: 20251109-task.md  20251109233530_serial-communication-and-websocket-server.md  20251113-140000_desktop-app-websocket-and-ui.md  20251113-150000_tui-client-implementation.md  20251116-022541_desktop-app-contents-implementation.md  (+10 more)
water-controller-app/: .gitignore  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json
water-controller-relay/: Cargo.toml  Makefile  Taskfile.yml
water-controller-relay/src/: args.rs  lib.rs  logger.rs  main.rs  relay.rs
water-controller-relay/src/serial/: input.rs  mod.rs  reader.rs
water-controller-relay/src/tui/: app.rs  handler.rs  logger.rs  mod.rs  ui.rs  websocket.rs
water-controller-relay/src/websocket/: handler.rs  message.rs  mod.rs  server.rs
(+90 files in other folders)
