[package]
name = "water-controller-relay"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "tui-client"
path = "src/bin/tui-client.rs"

[dependencies]
ansi-to-tui = "7.0.0"
axum = { version = "0.8.6", features = ["macros", "ws"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
futures-util = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serialport = "4.8.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter"] }
